fixing carousel's z-index

--- a/pemrograman_web/Tugas2/css/style.css
+++ b/pemrograman_web/Tugas2/css/style.css
@@ -113,3 +113,7 @@ nav {
 .toggle .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
+
+.lol {
+  z-index: 1;
+}
